Fix modal header overflow.

--- a/public/popup.css
+++ b/public/popup.css
@@ -24,6 +24,13 @@
   align-items: center;
   justify-content: center;
 }
+.modal > .header > span {
+  white-space: nowrap;
+}
+.modal > .header > span.shrink {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .modal > .content {
   padding: 10px 5px;
 }
